--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ APP_SECRET=YOUR_APP_SECRET
 CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
 GOOGLE_FETCH_USER=https://www.googleapis.com/plus/v1/people/me
 POSTGRES_DB=postgres://username:password@host:port/db_name
+AK_API_USERNAME=YOUR_AK_API_USERNAME
+AK_API_PASSWORD=YOUR_AK_API_PASSWORD
+AK_API_URL=YOUR_AK_API_URL
+FACEBOOK_APP_ID=YOUR_FACEBOOK_APP_ID
